--- a/index.html
+++ b/index.html
@@ -23,63 +23,63 @@
     <!-- Timeblocks go here -->
     <section class="row">
       <section class="time-block col-md-1">9 AM</section>
-      <textarea id="nineAM" class="description col-md-10"></textarea>
+      <textarea id= "nineAM"class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
       <section class="time-block col-md-1">10 AM</section>
-      <textarea class="description col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      <textarea id="tenAM" id="inputValue" class="description1 col-md-10" placeholder="Enter notes here.">test</textarea>
+      <button id="savenotesbtn" class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
       <section class="time-block col-md-1">11 AM</section>
-      <textarea class="description col-md-10"></textarea>
+      <textarea id="elevenAM" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
       <section class="time-block col-md-1">12 PM</section>
-      <textarea class="description col-md-10"></textarea>
+      <textarea id="twelvePM" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
       <section class="time-block col-md-1">1 PM</section>
-      <textarea class="description col-md-10"></textarea>
+      <textarea id="onePM" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
       <section class="time-block col-md-1">2 PM</section>
-      <textarea class="description col-md-10"></textarea>
+      <textarea id="twoPM" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
       <section class="time-block col-md-1">3 PM</section>
-      <textarea class="description col-md-10"></textarea>
+      <textarea id="threePM" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
       <section class="time-block col-md-1">4 PM</section>
-      <textarea class="description col-md-10"></textarea>
+      <textarea id="fourPM" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
       <section class="time-block col-md-1">5 PM</section>
-      <textarea class="description col-md-10"></textarea>
+      <textarea id="fivePM" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
