--- a/index.html
+++ b/index.html
@@ -22,63 +22,63 @@
   <div class="container">
     <!-- Timeblocks go here -->
     <section class="row">
-      <section class="time-block col-md-1">9 AM</section>
-      <textarea id= "09" class="description col-md-10" placeholder="Enter notes here."></textarea>
+      <section class="hour time-block col-md-1">9 AM</section>
+      <textarea id="09" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
-      <section class="time-block col-md-1">10 AM</section>
-      <textarea id="10" class="description col-md-10" placeholder="Enter notes here.">test</textarea>
+      <section class="hour time-block  col-md-1">10 AM</section>
+      <textarea id="10" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button id="savenotesbtn" class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
-      <section class="time-block col-md-1">11 AM</section>
+      <section class="hour time-block col-md-1">11 AM</section>
       <textarea id="11" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
-      <section class="time-block col-md-1">12 PM</section>
+      <section class="hour time-block col-md-1">12 PM</section>
       <textarea id="12" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
-      <section class="time-block col-md-1">1 PM</section>
+      <section class="hour time-block col-md-1">1 PM</section>
       <textarea id="13" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
-      <section class="time-block col-md-1">2 PM</section>
+      <section class="hour time-block col-md-1">2 PM</section>
       <textarea id="14" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
-      <section class="time-block col-md-1">3 PM</section>
+      <section class="hour time-block col-md-1">3 PM</section>
       <textarea id="15" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
-      <section class="time-block col-md-1">4 PM</section>
+      <section class="hour time-block col-md-1">4 PM</section>
       <textarea id="16" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
     </section>
 
     <section class="row">
-      <section class="time-block col-md-1">5 PM</section>
+      <section class="hour time-block col-md-1">5 PM</section>
       <textarea id="17" class="description col-md-10" placeholder="Enter notes here."></textarea>
       <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
 
