--- a/index.html
+++ b/index.html
@@ -14,82 +14,79 @@
 </head>
 
 <body>
+
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
-    <!-- Timeblocks go here -->
-    <section class="row">
-      <section class="hour time-block col-md-1">9 AM</section>
-      <textarea id="09" class="description col-md-10" placeholder="Enter notes here."></textarea>
-      <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+
+  <main>
+
+    <section class="container">
+      <!-- Timeblocks go here -->
+      <section class="row">
+        <section class="hour time-block col-sm-1">9 AM</section>
+        <textarea id="09" class="description col-sm-10" placeholder="Enter notes here."></textarea>
+        <button class="saveBtn col-sm-1"><i class="far fa-save"></i></button>
+      </section>
+
+      <section class="row">
+        <section class="hour time-block  col-sm-1">10 AM</section>
+        <textarea id="10" class="description col-sm-10" placeholder="Enter notes here."></textarea>
+        <button class="saveBtn col-sm-1"><i class="far fa-save"></i></button>
+      </section>
+
+      <section class="row">
+        <section class="hour time-block col-sm-1">11 AM</section>
+        <textarea id="11" class="description col-sm-10" placeholder="Enter notes here."></textarea>
+        <button class="saveBtn col-sm-1"><i class="far fa-save"></i></button>
+      </section>
+
+      <section class="row">
+        <section class="hour time-block col-sm-1">12 PM</section>
+        <textarea id="12" class="description col-sm-10" placeholder="Enter notes here."></textarea>
+        <button class="saveBtn col-sm-1"><i class="far fa-save"></i></button>
+      </section>
+
+      <section class="row">
+        <section class="hour time-block  col-sm-1">1 PM</section>
+        <textarea id="13" class="description col-sm-10" placeholder="Enter notes here."></textarea>
+        <button class="saveBtn   col-sm-1"><i class="far fa-save"></i></button>
+      </section>
+
+      <section class="row">
+        <section class="hour time-block col-sm-1">2 PM</section>
+        <textarea id="14" class="description col-sm-10" placeholder="Enter notes here."></textarea>
+        <button class="saveBtn col-sm-1"><i class="far fa-save"></i></button>
+      </section>
+
+      <section class="row">
+        <section class="hour time-block col-sm-1">3 PM</section>
+        <textarea id="15" class="description col-sm-10" placeholder="Enter notes here."></textarea>
+        <button class="saveBtn col-sm-1"><i class="far fa-save"></i></button>
+      </section>
+
+      <section class="row">
+        <section class="hour time-block col-sm-1">4 PM</section>
+        <textarea id="16" class="description col-sm-10" placeholder="Enter notes here."></textarea>
+        <button class="saveBtn col-sm-1"><i class="far fa-save"></i></button>
+      </section>
+
+      <section class="row">
+        <section class="hour time-block col-sm-1">5 PM</section>
+        <textarea id="17" class="description col-sm-10" placeholder="Enter notes here."></textarea>
+        <button class="saveBtn col-sm-1"><i class="far fa-save"></i></button>
+      </section>
 
     </section>
 
-    <section class="row">
-      <section class="hour time-block  col-md-1">10 AM</section>
-      <textarea id="10" class="description col-md-10" placeholder="Enter notes here."></textarea>
-      <button id="savenotesbtn" class="saveBtn col-md-1"><i class="far fa-save"></i></button>
-
-    </section>
-
-    <section class="row">
-      <section class="hour time-block col-md-1">11 AM</section>
-      <textarea id="11" class="description col-md-10" placeholder="Enter notes here."></textarea>
-      <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
-
-    </section>
-
-    <section class="row">
-      <section class="hour time-block col-md-1">12 PM</section>
-      <textarea id="12" class="description col-md-10" placeholder="Enter notes here."></textarea>
-      <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
-
-    </section>
-
-    <section class="row">
-      <section class="hour time-block col-md-1">1 PM</section>
-      <textarea id="13" class="description col-md-10" placeholder="Enter notes here."></textarea>
-      <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
-
-    </section>
-
-    <section class="row">
-      <section class="hour time-block col-md-1">2 PM</section>
-      <textarea id="14" class="description col-md-10" placeholder="Enter notes here."></textarea>
-      <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
-
-    </section>
-
-    <section class="row">
-      <section class="hour time-block col-md-1">3 PM</section>
-      <textarea id="15" class="description col-md-10" placeholder="Enter notes here."></textarea>
-      <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
-
-    </section>
-
-    <section class="row">
-      <section class="hour time-block col-md-1">4 PM</section>
-      <textarea id="16" class="description col-md-10" placeholder="Enter notes here."></textarea>
-      <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
-
-    </section>
-
-    <section class="row">
-      <section class="hour time-block col-md-1">5 PM</section>
-      <textarea id="17" class="description col-md-10" placeholder="Enter notes here."></textarea>
-      <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
-
-    </section>
-
-
-  </div>
+  </main>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="script.js"></script>
+
 </body>
 
 </html>
